change default backog to system default value

--- a/doc/rtorrent.rc
+++ b/doc/rtorrent.rc
@@ -46,7 +46,7 @@
 #port_range = 6890-6999
 
 # Backlog for listening
-#listen_backlog = 511
+#listen.backlog = 128
 
 # Start opening ports at a random position within the port range.
 #port_random = no
