unset __STRICT_ANSI__ g++ flag to allow compilation in Cygwin

--- a/configure.ac
+++ b/configure.ac
@@ -64,6 +64,19 @@ CC_ATTRIBUTE_UNUSED(
 	AC_DEFINE([__UNUSED], [], [Null-wrapper if unused attribute is unsupported])
 )
 
+AC_CANONICAL_HOST
+AC_MSG_CHECKING(for Cygwin)
+case $host in
+	*cygwin*)
+		OS_CYGWIN=yes
+		CXXFLAGS="$CXXFLAGS -U__STRICT_ANSI__"
+		;;
+	*)
+		OS_CYGWIN=no
+		;;
+esac
+AC_MSG_RESULT($OS_CYGWIN)
+
 AC_OUTPUT([
 	Makefile
 	doc/Makefile
