--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -25,7 +25,7 @@ jobs:
         automake --add-missing
         ./configure
         make
-        make install
+        sudo make install
         cd ..
         rm -rf libtorrent
     - uses: actions/checkout@v4
