Add JSON-RPC capability
Inline nlohmann/json for the JSON parsing itself, and handle requests
with the same SCGI interface as XML-RPC.

Based off the work in https://github.com/jesec/rtorrent

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -107,6 +107,10 @@ libsub_root_a_SOURCES = \
 	rpc/exec_file.h \
 	rpc/fixed_key.h \
 	rpc/ip_table_list.h \
+	rpc/jsonrpc.cc \
+	rpc/jsonrpc.h \
+	rpc/rpc_manager.cc \
+	rpc/rpc_manager.h \
 	rpc/object_storage.cc \
 	rpc/object_storage.h \
 	rpc/parse.cc \
@@ -125,6 +129,7 @@ libsub_root_a_SOURCES = \
 	rpc/xmlrpc_tinyxml2.cc \
 	rpc/tinyxml2/tinyxml2.h \
 	rpc/tinyxml2/tinyxml2.cc \
+	rpc/nlohmann/json.h \
 	\
 	ui/download.cc \
 	ui/download.h \
@@ -155,6 +160,7 @@ libsub_root_a_SOURCES = \
 	ui/root.cc \
 	ui/root.h \
 	\
+	utils/base64.cc \
 	utils/base64.h \
 	utils/directory.cc \
 	utils/directory.h \
