--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -37,7 +37,7 @@ jobs:
         git fetch --no-tags --no-recurse-submodules upstream "${{ github.event.pull_request.base.ref }}"
     - name: Install Dependencies
       run: |
-        sudo apt-get install -y bear clang-tidy libcurl4-openssl-dev
+        sudo apt-get install -y bear clang-tidy libcurl4-openssl-dev zlib1g-dev
     - name: Configure Project
       run: |
         libtoolize
