--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -14,10 +14,19 @@ rtorrent_Test_Common = \
 	main.cc \
 	\
 	helpers/assert.h \
+	helpers/mock_compare.h \
+	helpers/mock_function.cc \
+	helpers/mock_function.h \
 	helpers/progress_listener.cc \
 	helpers/progress_listener.h \
 	helpers/protectors.cc \
 	helpers/protectors.h \
+	helpers/test_fixture.cc \
+	helpers/test_fixture.h \
+	helpers/test_main_thread.cc \
+	helpers/test_main_thread.h \
+	helpers/test_thread.cc \
+	helpers/test_thread.h \
 	helpers/utils.h
 
 rtorrent_Test_Rpc_SOURCES = $(rtorrent_Test_Common) \
@@ -34,13 +43,11 @@ rtorrent_Test_Rpc_SOURCES = $(rtorrent_Test_Common) \
 	rpc/object_storage_test.cc \
 	rpc/object_storage_test.h \
 	rpc/test_parse_options.cc \
-	rpc/test_parse_options.h \
-	src/command_dynamic_test.cc \
-	src/command_dynamic_test.h
+	rpc/test_parse_options.h
 
 rtorrent_Test_Src_SOURCES = $(rtorrent_Test_Common) \
-	src/command_dynamic_test.cc \
-	src/command_dynamic_test.h
+	src/test_command_dynamic.cc \
+	src/test_command_dynamic.h
 
 rtorrent_Test_Rpc_CXXFLAGS = $(CPPUNIT_CFLAGS)
 rtorrent_Test_Rpc_LDFLAGS = $(CPPUNIT_LIBS) -ldl
