get nlohmann json from pkgconfig
Many distros already include it as a package.

Signed-off-by: Rosen Penev <rosenp@gmail.com>

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -16,7 +16,8 @@ jobs:
         sudo apt-get install -y \
           bear \
           clang-tidy \
-          libcurl4-openssl-dev
+          libcurl4-openssl-dev \
+          nlohmann-json3-dev
     - name: Fetch libtorrent
       run: |
         git clone https://github.com/rakshasa/libtorrent
