--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -15,7 +15,8 @@ jobs:
       run: |
         sudo apt-get install -y \
           libcppunit-dev \
-          libcurl4-openssl-dev
+          libcurl4-openssl-dev \
+          nlohmann-json3-dev
     - name: Fetch libtorrent
       run: |
         git clone https://github.com/rakshasa/libtorrent
